# qemu

./: .gitignore  MAINTAINERS  blockdev.c  event-loop-base.c  hmp-commands.hx  iothread.c  meson.build  meson_options.txt  qemu-bridge-helper.c  qemu-options.hx
accel/hvf/: hvf-accel-ops.c
accel/kvm/: kvm-all.c  trace-events
accel/tcg/: cputlb.c  tcg-all.c
audio/: audio.c  audio_int.h  audio_template.h  trace-events
authz/: list.c
backends/: cryptodev.c  hostmem-file.c  hostmem-memfd.c  hostmem.c
backends/tpm/: tpm_util.c
block/: throttle-groups.c
chardev/: char-socket.c
contrib/plugins/: execlog.c
crypto/: secret_keyring.c
docs/devel/: build-windows.rst  index-build.rst  rust.rst  testing-acceptance.rst  tracing.rst  writing-monitor-commands.rst
docs/system/: target-i386-desc.rst.inc
dump/: dump.c
gdbstub/: gdbstub.c
hw/: Kconfig  meson.build
hw/acpi/: aml-build.c  core.c  cpu_hotplug.c  ich9.c  ich9_tco.c  meson.build  nvdimm.c  pcihp.c  piix4.c  trace-events  vmgenid.c
hw/alpha/: alpha_sys.h  dp264.c  pci.c  typhoon.c
hw/arm/: Kconfig  aspeed.c  boot.c  collie.c  cubieboard.c  digic_boards.c  exynos4_boards.c  fsl-imx6.c  fsl-imx6ul.c  fsl-imx7.c  fsl-imx8mp.c  gumstix.c  highbank.c  imx25_pdk.c  imx8mp-evk.c  integratorcp.c  kzm.c  mainstone.c  mcimx6ul-evk.c  mcimx7d-sabre.c  meson.build  microbit.c  mps2-tz.c  mps2.c  msf2-som.c  musca.c  musicpal.c  npcm7xx_boards.c  nseries.c  omap1.c  omap_sx1.c  orangepi.c  palm.c  pxa2xx.c  raspi.c  realview.c  sabrelite.c  sbsa-ref.c  smmu-common.c  smmuv3.c  (+11 more)
hw/audio/: cs4231a.c  gus.c  meson.build  pcspk.c  sb16.c  trace-events  via-ac97.c
hw/block/: fdc-isa.c  m25p80.c  pflash_cfi01.c  trace-events  xen-block.c
hw/char/: Kconfig  imx_serial.c  meson.build  omap_uart.c  parallel.c  serial-isa.c  serial-mm.c  serial-pci-multi.c  serial-pci.c  serial.c  trace-events
hw/core/: Kconfig  bus.c  fdt_generic.c  fdt_generic_devices.c  fdt_generic_devices_flash.c  fdt_generic_devices_serial.c  fdt_generic_user_creatable.c  fdt_generic_util.c  loader.c  machine.c  meson.build  null-machine.c  proxy-pic.c  qdev-dt-interface.c  qdev-prop-internal.h  qdev-properties-system.c  qdev-properties.c  qdev.c  shared-irq.c  sysbus-fdt.c  sysbus.c
hw/cpu/: core.c
hw/cris/: axis_dev88.c
hw/cxl/: cxl-host.c
hw/display/: exynos4210_fimd.c  pl110.c  qxl.c  (+6 more)
kate-syntax-hightlight/: qemu-execlog.xml
monitor/: misc.c
net/: colo-compare.c  dump.c  filter-buffer.c
pc-bios/: imx8mp-boot.rom  meson.build
pc-bios/dtb/: meson.build  qemu-aarch64-virt.dts  qemu-mpc8544ds.dts  qemu-ppce500.dts  tabor2.dts
plugins/: api.c
qapi/: gpio.json  meson.build  qapi-schema.json
qom/: meson.build  object.c  object_interfaces.c  qom-qmp-cmds.c
rust/: Cargo.toml  wrapper.h
rust/hw/char/serial/: Cargo.toml  meson.build
rust/hw/char/serial/src/: device.rs  device_class.rs  lib.rs
scripts/: checkpatch.pl  meson-buildoptions.sh
softmmu/: bootdevice.c  cpus.c  device_tree.c  dma-helpers.c  ioport.c  memory.c  memory_mapping.c  physmem.c  qdev-monitor.c
stubs/: meson.build  xen-hw-stub.c
subprojects/: dtc.wrap
system/: ioport.c  memory.c  trace-events
ui/: console.c  gtk-egl.c  gtk-gl-area.c  gtk.c  input.c  sdl2.c  trace-events  util.c  win32-kbd-hook.c
util/: log.c  thread-context.c
(+510 files in other folders)
