[package]
name = "serial"
version = "0.1.0"
edition = "2021"
authors = ["Bernhard Beschow <shentey@gmail.com>"]
license = "GPL-2.0-or-later"
description = "16550-style serial implementation for QEMU"
resolver = "2"
publish = false
keywords = []
categories = []
rust-version = "1.63.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
bilge = { version = "0.2.0" }
bilge-impl = { version = "0.2.0" }
qemu_api = { path = "../../../qemu-api" }
qemu_api_macros = { path = "../../../qemu-api-macros" }

[lints]
workspace = true
